# svdd2024seg

./: .gitignore  .gitmodules  README.md  pyproject.toml  runall.sh
jvs_music_ver1/: gather_wavs.py  run.sh
kiritan_singing/: config.yaml  run.sh
ofuton_p_utagoe_db/: config.yaml  run.sh
oniku_kurumi_utagoe_db/: config.yaml  run.sh
